--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="public/css/style.css" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Ohmyfood! Paris by Julien Penna</title>
     <link
       rel="stylesheet"
@@ -13,13 +13,13 @@
       integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
+   >
   </head>
   <body>
     <header>
       <nav>
         <h1>ohmyfood</h1>
-      <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood" class="logo"> -->
+        <!-- <img src="images/logo/ohmyfood.png" alt="logo ohmyfood" class="logo"> -->
       </nav>
       <div class="localization">
         <h2><i class="fa-solid fa-location-dot"></i>Paris, Belleville</h2>
@@ -63,7 +63,7 @@
               <img
                 src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="Fines tranches de saumon et verdure dans assiette en céramique"
-              />
+             >
               <div class="new">Nouveau</div>
               <div class="container">
                 <div class="resto-place-fav">
@@ -82,18 +82,18 @@
               <img
                 src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="Boulettes de viande dans assiette en céramique blanche"
-              />
+             >
               <div class="new">Nouveau</div>
               <div class="container">
                 <div class="resto-place-fav">
-                <div class="resto">
-                  <h5>La note enchantée</h5>
-                  <p>Charonne</p>
+                  <div class="resto">
+                    <h5>La note enchantée</h5>
+                    <p>Charonne</p>
+                  </div>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-heart bg-heart"></i>
                 </div>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-solid fa-heart bg-heart"></i>
               </div>
-            </div>
             </div>
           </a>
 
@@ -102,17 +102,17 @@
               <img
                 src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
-              />
+             >
               <div class="container">
                 <div class="resto-place-fav">
-                <div class="resto">
-                  <h5>À la française</h5>
-                  <p>Cité Rouge</p>
+                  <div class="resto">
+                    <h5>À la française</h5>
+                    <p>Cité Rouge</p>
+                  </div>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-heart bg-heart"></i>
                 </div>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-solid fa-heart bg-heart"></i>
               </div>
-            </div>
             </div>
           </a>
 
@@ -121,18 +121,18 @@
               <img
                 src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="poisson servi dans son assiette en forme de barque"
-              />
+             >
               <div class="container">
                 <div class="resto-place-fav">
-                <div class="resto">
-                  <h5>Le délice des sens</h5>
-                  <p>Folie-Méricourt</p>
+                  <div class="resto">
+                    <h5>Le délice des sens</h5>
+                    <p>Folie-Méricourt</p>
+                  </div>
+                  <i class="fa-regular fa-heart"></i>
+                  <i class="fa-solid fa-heart bg-heart"></i>
                 </div>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-solid fa-heart bg-heart"></i>
               </div>
             </div>
-          </div>
           </a>
         </div>
       </section>
@@ -141,12 +141,12 @@
     <div class="spinner">
       <div class="bg-icons">
         <div class="icons">
-          <img src="images\icons\couverts-icon.png" alt="couverts" />
+          <img src="images/icons/couverts-icon.png" alt="couverts">
           <img
-            src="images\icons\cloche-serveur-icon.png"
+            src="images/icons/cloche-serveur-icon.png"
             alt="cloche serveur"
-          />
-          <img src="images\icons\chef-cook.png" alt="toque chef" />
+         >
+          <img src="images/icons/chef-cook.png" alt="toque chef">
         </div>
       </div>
     </div>
