--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="public/css/style.css" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>La Palette du Goût, Restaurant - Ohmyfood by Julien Penna</title>
     <link
       rel="stylesheet"
@@ -13,7 +13,7 @@
       integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
+   >
   </head>
   <body>
     <header>
@@ -25,7 +25,7 @@
       <img
         src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
         alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
-      />
+     >
     </header>
 
     <div class="menu">
