--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         ><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a
       >
       <a href="#">Mentions légales</a>
-      <a href="mailto:contact@ohmyfood.com">Contact</a>
+      <a href="mailto:contact@ohmyfood.com" class="contact">Contact</a>
     </footer>
   </body>
 </html>
