--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
       </section>
     </main>
-
+<!-- LOADER  -->
     <div class="spinner">
       <div class="bg-icons">
         <div class="icons">
@@ -150,7 +150,7 @@
         </div>
       </div>
     </div>
-
+<!-- FIN LOADER  -->
     <footer>
       <h6>ohmyfood</h6>
       <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
